--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
     <header>
       <h1>Home Page</h1>
       <nav>
-        <a href="about.html">About</a>
+        <a href="linked.html">About</a>
       </nav>
     </header>
   </body>
