--- a/app/about.html
+++ b/app/about.html
@@ -10,6 +10,7 @@
       <h1>Home Page</h1>
       <nav>
         <a href="index.html">Home</a>
+        <p>skateboarding is cool. I really like skateboarding. It is fun.</p>
       </nav>
     </header>
   </body>
