also edited html

--- a/app/about.html
+++ b/app/about.html
@@ -11,6 +11,7 @@
       <nav>
         <a href="index.html">Home</a>
         <p>skateboarding is cool. I really like skateboarding. It is fun.</p>
+        <p>I also think skateboarding is cool.  I used to do it when I was young, but now I suck ass.</p>
       </nav>
     </header>
   </body>
