added paragraph to index.html

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
       <h1>Home Page</h1>
       <nav>
         <a href="linked.html">About</a>
+        <p>I like to play bass in my band.  Being in a band is fun.  Bass also is fun.</p>
       </nav>
     </header>
   </body>
